--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Результаты курса «УрФУ-2015 Frontend разработка»</title>
+    <title>Результаты курса «УрФУ-2015: Frontend разработка»</title>
     <style>
         body {
             margin: 0;
@@ -27,7 +27,7 @@
     </style>
 </head>
 <body>
-    <h1>Результаты курса «УрФУ-2015 Frontend разработка»</h1>
+    <h1>Результаты курса «УрФУ-2015: Frontend разработка»</h1>
     <nav>
         – <a href="javascript.html" target="_blank">JavaScript</a><br>
         – <a href="verstka.html" target="_blank">Вёрстка</a>
